log/build_2024-05-07_14-02-15/my_docking/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/easy_install.py:158: EasyInstallDeprecationWarning: easy_install command is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/oh/slam_ws/install/my_docking/lib/python3.10/site-packages/my_docking/docking_server_trial.py", line 67
    if len(msg.poses) > 0 and :
                              ^
SyntaxError: invalid syntax

  File "/home/oh/slam_ws/install/my_docking/lib/python3.10/site-packages/my_docking/dockingtwo_action_server.py", line 77
    feedback_msg.
                 ^
SyntaxError: invalid syntax

